force-app/main/default/objects/SurveyAnswer__c.object
<CustomObject>
    <description>Individual answer records normalized per question</description>
    <fields>
        <fullName>SurveyResponse__c</fullName>
        <label>Survey Response</label>
        <referenceTo>SurveyResponse__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SurveyQuestion__c</fullName>
        <label>Question</label>
        <referenceTo>SurveyQuestion__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_Answer__c</fullName>
        <description>Text answer for text-type questions</description>
        <label>Text Answer</label>
        <length>2000</length>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_Answer__c</fullName>
        <description>Numeric answer for NPS or Rating type questions</description>
        <label>Number Answer</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_Options__c</fullName>
        <description>JSON array of selected options for MultipleChoice</description>
        <label>Selected Options</label>
        <length>500</length>
        <type>TextArea</type>
    </fields>
    <label>Survey Answer</label>
    <nameField>
        <label>Survey Answer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>